--- a/style.css
+++ b/style.css
@@ -1,17 +1,28 @@
-#navbar{
+#navbar {
     float: left;
+    width: auto;
+    height: 100%;
+    overflow: scroll;
     position: fixed;
     top: 0;
     left: 0;
-}
+    background: white;
+    font-family: arial;
+    color: #4d4e53;
+    font-size: large;
+    text-align: center;
+  }
 @media screen and (max-width: 768px) {
     #navbar {
       float: none;
       height: 200px;
       width: 100%;
     }
-#main-doc{
-   display: flex;
-   align-content: center;
-    align-items: center;
-}    
+} 
+#main-doc {
+    margin-left: 370px;
+    font-family: arial;
+    font-size: 15px;
+    color: #4d4e53;
+  }
+  
